Wed Mar 24 21:58:13 2004                        Michael Jennings (mej)

Added specgen, a very basic specfile generator.  It will get more
powerful as time progresses.
----------------------------------------------------------------------
Thu Mar 25 11:10:42 2004                        Michael Jennings (mej)

Minor touchups for 1.7-0.2.
----------------------------------------------------------------------
Fri Mar 26 16:26:04 2004                        Michael Jennings (mej)

Made temp space creation more generic.  This needs to be used for all
temp space creation ASAP.

Centralized some common initialization code.

Added 2 new spec templates, make and imake.

Added specgen to installed scripts.

specgen now has automatic detection of:
 - %setup macro parameters
 - documentation files
 - package license
----------------------------------------------------------------------
Tue Mar 30 18:56:35 2004                        Michael Jennings (mej)

Fixes for older systems.
----------------------------------------------------------------------
Tue Mar 30 21:04:18 2004                        Michael Jennings (mej)

This was the start of subversion support, but I decided I really
didn't care too much for the design.  But I thought I'd check this in
anyway since it doesn't seem to break anything.  But I'm going to
implement the revision control backend in a new and completely
different way to (hopefully) be a lot easier to extend.
----------------------------------------------------------------------
Tue Mar 30 21:21:57 2004                        Michael Jennings (mej)

Converted pkgtool to use new mezz_init() and options stuff.

Moved cache files.
----------------------------------------------------------------------
Thu Apr  1 18:24:19 2004                        Michael Jennings (mej)

Added config engine.

Added initial attempt at preserving successful build logs.
----------------------------------------------------------------------